--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <div class="nav-logo">
       <a href="#"><img src="img/Crikey.webp" alt="Logo" /></a>
     </div>
-    <ul class="nav-list">
-      <!-- Other navigation items if any -->
+    <!-- Central navigation items -->
+    <ul class="nav-list nav-list-center">
+      <li class="nav-item">
+        <a href="https://beta.pinksale.finance/solana/launchpad/66AN26fGkLqM5F7WP9msqrtpE8DNx6zzw56nCFR3v1WP" class="nav-link">
+          <img src="img/presale.webp" alt="YOUR_IMAGE_ALT_TEXT" />
+        </a>
+      </li>
+      <!-- You can add more navigation items here if needed -->
     </ul>
     <ul class="nav-list nav-list-right">
       <li class="nav-item">
